# clarax

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CLARAX_CORE_PLAN.md  CLARAX_ROADMAP.md  Cargo.toml  PYFORGE_CORE_PLAN.md  PYFORGE_ROADMAP.md  README.md  UPGRADING.md  publish-pypi-core.sh  publish-pypi.sh  publish.sh  pyproject.toml
clarax-benches/: Cargo.toml
clarax-build-config/: Cargo.toml
clarax-core/: Cargo.toml  pyproject.toml
clarax-core/clarax_core/: __init__.py
clarax-core/src/: engine_validate.rs  lib.rs
clarax-django/: Cargo.toml  pyproject.toml
clarax-django/django_clarax/: __init__.py
clarax-ffi/: Cargo.toml
clarax-introspection/: Cargo.toml
clarax-macros/: Cargo.toml
clarax-macros-backend/: Cargo.toml
examples/: Cargo.toml
examples/decorator/: Cargo.toml
examples/getitem/: Cargo.toml
examples/maturin-starter/: Cargo.toml
examples/plugin/: Cargo.toml
pyforge-core/: README.md
pyforge-django/: Cargo.toml  README.md  pyproject.toml
pyo3-benches/: Cargo.toml
pyo3-build-config/: Cargo.toml
pyo3-ffi/: Cargo.toml
pyo3-ffi-check/: Cargo.toml
pyo3-ffi/examples/sequential/: Cargo.toml
pyo3-ffi/examples/string-sum/: Cargo.toml
pyo3-ffi/src/: bytearrayobject.rs  import.rs  intrcheck.rs  methodobject.rs  tupleobject.rs
pyo3-ffi/src/cpython/: descrobject.rs  frameobject.rs  genobject.rs  object.rs  objimpl.rs  pystate.rs
pyo3-introspection/: Cargo.toml
pyo3-macros/: Cargo.toml
pyo3-macros-backend/: Cargo.toml
pyo3-shim/: Cargo.toml
pytests/: Cargo.toml
src/: impl_.rs  lib.rs  sync.rs
src/impl_/: deprecated.rs
(+13 files in other folders)
