[package]
name = "pyforge-ffi"
version = "0.30.0"
description = "CPython 3.11+ C-API bindings for the PyForge ecosystem"
authors = ["Abdulwahed Mansour"]
keywords = ["pyforge", "python", "cpython", "ffi"]
homepage = "https://github.com/abdulwahed-sweden/pyforge"
repository = "https://github.com/abdulwahed-sweden/pyforge"
categories = ["api-bindings", "development-tools::ffi"]
license = "MIT OR Apache-2.0"
edition = "2021"
links = "python"
rust-version.workspace = true

[dependencies]
libc = "0.2.62"

[features]

default = []

# Use the Python limited API. See https://www.python.org/dev/peps/pep-0384/ for more.
abi3 = ["pyo3-build-config/abi3"]

# With abi3, set minimum Python version. PyForge requires 3.11+.
abi3-py311 = ["abi3-py312", "pyo3-build-config/abi3-py311"]
abi3-py312 = ["abi3-py313", "pyo3-build-config/abi3-py312"]
abi3-py313 = ["abi3-py314", "pyo3-build-config/abi3-py313"]
abi3-py314 = ["abi3", "pyo3-build-config/abi3-py314"]

[dev-dependencies]
paste = "1"

[build-dependencies]
pyo3-build-config = { path = "../pyo3-build-config", version = "=0.30.0", package = "pyforge-build-config", features = ["resolve-config"] }

[lints]
workspace = true

[package.metadata.cpython]
min-version = "3.11"
max-version = "3.15" # inclusive
